syntax = "proto3";

package croupier.agent.local.v1;
option java_package = "io.github.cuihairu.croupier.agent.local.v1";
option java_multiple_files = true;
option go_package = "github.com/cuihairu/croupier/pkg/pb/croupier/agent/local/v1;localv1";

// Local function registration from game servers to Agent
// Based on OpenAPI 3.0.3 Operation Object fields
message LocalFunctionDescriptor {
  string id = 1;                          // Unique function identifier
  string version = 2;                     // Function version

  // OpenAPI 3.0.3 Operation Object fields
  repeated string tags = 3;               // Tags for grouping operations
  string summary = 4;                     // Short summary
  string description = 5;                 // Detailed description (supports markdown)
  string operation_id = 6;                // Unique operation ID
  bool deprecated = 7;                    // Deprecation status

  // OpenAPI 3.0.3 Schema fields (JSON Schema format)
  string input_schema = 8;                // JSON Schema for request body (requestBody.content.application/json.schema)
  string output_schema = 9;               // JSON Schema for response body (responses.200.content.application/json.schema)

  // x-render extension for UI control
  string x_render_schema = 10;            // XRender form schema (JSON string)
  string x_render_ui_schema = 11;         // XRender UI schema for widget configuration (JSON string)
}

message RegisterLocalRequest {
  string service_id = 1;
  string version = 2;
  string rpc_addr = 3;
  repeated LocalFunctionDescriptor functions = 4;
}

message RegisterLocalResponse { string session_id = 1; }

message HeartbeatRequest { string service_id = 1; string session_id = 2; }
message HeartbeatResponse {}

// Query local registered instances
message LocalInstance { string service_id = 1; string addr = 2; string version = 3; string last_seen = 4; }
message LocalFunction { string id = 1; repeated LocalInstance instances = 2; }
message ListLocalRequest {}
message ListLocalResponse { repeated LocalFunction functions = 1; }

// Query job result from Agent (best-effort)
message GetJobResultRequest { string job_id = 1; }
message GetJobResultResponse { string state = 1; bytes payload = 2; string error = 3; }

service LocalControlService {
  rpc RegisterLocal(RegisterLocalRequest) returns (RegisterLocalResponse);
  rpc Heartbeat(HeartbeatRequest) returns (HeartbeatResponse);
  rpc ListLocal(ListLocalRequest) returns (ListLocalResponse);
  rpc GetJobResult(GetJobResultRequest) returns (GetJobResultResponse);
}
