syntax = "proto3";

package croupier.common.v1;
option java_package = "io.github.cuihairu.croupier.common.v1";
option java_multiple_files = true;

option go_package = "github.com/cuihairu/croupier/pkg/pb/croupier/common/v1;commonv1";

// Generic i18n text with common languages.
message I18nText {
  string en = 1;
  string zh = 2;
  // reserved for more locales
}

// Menu metadata for building dynamic navigation in the UI.
message Menu {
  string section = 1;  // Top-level section: e.g. "Function Management" | "Operations" | "Analytics"
  string group   = 2;  // Group within section: e.g. "Moderation" | "Player"
  string path    = 3;  // Preferred landing path: e.g. "/functions/invoke"
  int32  order   = 4;  // Ordering weight (ascending)
  string icon    = 5;  // Icon id (frontend mapping)
  string badge   = 6;  // "beta" | "new" | custom
  bool   hidden  = 7;  // true → do not show in menu
}

// Role binding: which roles should be granted which verbs by default.
message RoleBinding {
  string role = 1;
  repeated string verbs = 2;
}

// Permission specification for a resource (function/component).
message PermissionSpec {
  // Verbs applicable to the resource: e.g. read/invoke/view_history/manage/use
  repeated string verbs = 1;
  // Scopes supported for ABAC policies: e.g. game/env/function_id
  repeated string scopes = 2;
  // Default role → verbs bindings (suggested grants).
  repeated RoleBinding defaults = 3;
  // Optional zh texts per verb. If absent, UI will fallback to templates.
  map<string, string> i18n_zh = 4;
}

// XRender widget configuration for a field.
message XRenderWidget {
  string widget = 1;              // Widget type: input/textarea/number/select/checkbox/radio/switch/date/time/json-editor/file
  string label = 2;               // Display label (supports i18n key)
  string placeholder = 3;         // Placeholder text
  bool disabled = 4;              // Whether the field is disabled
  bool read_only = 5;             // Whether the field is read-only
  bool hidden = 6;                // Whether the field is hidden
  int32 span = 7;                 // Grid span (1-24)
  map<string, string> props = 8;  // Additional widget properties
}

// XRender form configuration.
message XRenderFormConfig {
  string layout_type = 1;                     // Layout: default/inline/flex
  int32 column = 2;                           // Column count for grid layout
  string label_align = 3;                     // Label alignment: left/right/top
  int32 label_width = 4;                      // Label width in pixels
  bool colon = 5;                             // Show colon after label
  map<string, XRenderWidget> widgets = 6;     // Field-specific widget configs (key: field path)
  repeated string display_order = 7;          // Field display order
}

// Route-specific display configuration for functions.
message RouteDisplayConfig {
  string route_pattern = 1;           // Route pattern (e.g., "/functions/*", "/quick-actions")
  XRenderFormConfig form_config = 2;  // Form configuration for this route
  repeated string hidden_fields = 3;  // Fields to hide in this route
  repeated string required_fields = 4; // Fields required in this route
  string submit_button_text = 5;      // Custom submit button text
  bool compact_mode = 6;              // Use compact display mode
}


